terraform/ec2-n8n/vpc-n8n.tf
resource "aws_vpc" "n8n-integ_vpc" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "n8n-integ-ec2-vpc"
  }
}

resource "aws_subnet" "n8n-integ_subnet" {
  vpc_id                  = aws_vpc.n8n-integ_vpc.id
  cidr_block              = "10.0.1.0/24"
  availability_zone       = "us-east-1b"

  tags = {
    Name = "n8n-integ-ec2-subnet"
  }
}

resource "aws_internet_gateway" "n8n-integ_igw" {
  vpc_id = aws_vpc.n8n-integ_vpc.id

  tags = {
    Name = "n8n-integ-ec2-igw"
  }
}

resource "aws_route_table" "n8n-integ_route_table" {
  vpc_id = aws_vpc.n8n-integ_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.n8n-integ_igw.id
  }

  tags = {
    Name = "n8n-integ-ec2-rt"
  }
}

resource "aws_route_table_association" "n8n-integ_route_table_assoc" {
  subnet_id      = aws_subnet.n8n-integ_subnet.id
  route_table_id = aws_route_table.n8n-integ_route_table.id
}
